Updated doc release: current

--- a/current/user_guide/getting_started.html
+++ b/current/user_guide/getting_started.html
@@ -25,7 +25,7 @@
     <link rel="shortcut icon" href="../_static/hyperspy_logo.ico"/>
     <link rel="top" title="Hyperspy v0.3.0 documentation" href="../index.html" />
     <link rel="up" title="Hyperspy User Guide (DRAFT)" href="index.html" />
-    <link rel="next" title="Aggregating data" href="aggregate.html" />
+    <link rel="next" title="Loading and saving data" href="aggregate.html" />
     <link rel="prev" title="Installing Hyperspy" href="install.html" /> 
   </head>
   <body>
@@ -39,7 +39,7 @@
           <a href="../py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
         <li class="right" >
-          <a href="aggregate.html" title="Aggregating data"
+          <a href="aggregate.html" title="Loading and saving data"
              accesskey="N">next</a> |</li>
         <li class="right" >
           <a href="install.html" title="Installing Hyperspy"
@@ -275,7 +275,7 @@ to pan/zoom and more a matplotlib plot
                         title="previous chapter">Installing Hyperspy</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="aggregate.html"
-                        title="next chapter">Aggregating data</a></p>
+                        title="next chapter">Loading and saving data</a></p>
   <h3>This Page</h3>
   <ul class="this-page-menu">
     <li><a href="../_sources/user_guide/getting_started.txt"
@@ -308,7 +308,7 @@ to pan/zoom and more a matplotlib plot
           <a href="../py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
         <li class="right" >
-          <a href="aggregate.html" title="Aggregating data"
+          <a href="aggregate.html" title="Loading and saving data"
              >next</a> |</li>
         <li class="right" >
           <a href="install.html" title="Installing Hyperspy"
