--- a/current/user_guide/mva.html
+++ b/current/user_guide/mva.html
@@ -26,7 +26,7 @@
     <link rel="top" title="Hyperspy v0.3.0 documentation" href="../index.html" />
     <link rel="up" title="Hyperspy User Guide (DRAFT)" href="index.html" />
     <link rel="next" title="Curve fitting" href="model.html" />
-    <link rel="prev" title="Aggregating data" href="aggregate.html" /> 
+    <link rel="prev" title="Loading and saving data" href="aggregate.html" /> 
   </head>
   <body>
     <div class="related">
@@ -42,7 +42,7 @@
           <a href="model.html" title="Curve fitting"
              accesskey="N">next</a> |</li>
         <li class="right" >
-          <a href="aggregate.html" title="Aggregating data"
+          <a href="aggregate.html" title="Loading and saving data"
              accesskey="P">previous</a> |</li>
         <li><a href="../index.html">Hyperspy v0.3.0 documentation</a> &raquo;</li>
           <li><a href="index.html" accesskey="U">Hyperspy User Guide (DRAFT)</a> &raquo;</li> 
@@ -253,7 +253,7 @@ Micrograph.</p>
 
   <h4>Previous topic</h4>
   <p class="topless"><a href="aggregate.html"
-                        title="previous chapter">Aggregating data</a></p>
+                        title="previous chapter">Loading and saving data</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="model.html"
                         title="next chapter">Curve fitting</a></p>
@@ -292,7 +292,7 @@ Micrograph.</p>
           <a href="model.html" title="Curve fitting"
              >next</a> |</li>
         <li class="right" >
-          <a href="aggregate.html" title="Aggregating data"
+          <a href="aggregate.html" title="Loading and saving data"
              >previous</a> |</li>
         <li><a href="../index.html">Hyperspy v0.3.0 documentation</a> &raquo;</li>
           <li><a href="index.html" >Hyperspy User Guide (DRAFT)</a> &raquo;</li> 
