--- a/dev/np-modindex.html
+++ b/dev/np-modindex.html
@@ -40,10 +40,10 @@
           <a href="genindex.html" title="General Index"
              accesskey="I">index</a></li>
         <li class="right" >
-          <a href="#" title="Python Module Index"
+          <a href="py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
         <li class="right" >
-          <a href="np-modindex.html" title="Python Module Index"
+          <a href="#" title="Python Module Index"
              >modules</a> |</li>
         <li><a href="index.html">Hyperspy 0.3.dev documentation</a> &raquo;</li> 
       </ul>
@@ -531,10 +531,10 @@
           <a href="genindex.html" title="General Index"
              >index</a></li>
         <li class="right" >
-          <a href="#" title="Python Module Index"
+          <a href="py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
         <li class="right" >
-          <a href="np-modindex.html" title="Python Module Index"
+          <a href="#" title="Python Module Index"
              >modules</a> |</li>
         <li><a href="index.html">Hyperspy 0.3.dev documentation</a> &raquo;</li> 
       </ul>
