--- a/dev/examples/data_navigation/index.html
+++ b/dev/examples/data_navigation/index.html
@@ -56,7 +56,7 @@
 <tbody valign="top">
 <tr class="field"><th class="field-name">Release:</th><td class="field-body">0.3.dev</td>
 </tr>
-<tr class="field"><th class="field-name">Date:</th><td class="field-body">August 24, 2011</td>
+<tr class="field"><th class="field-name">Date:</th><td class="field-body">agosto 26, 2011</td>
 </tr>
 </tbody>
 </table>
