--- a/dev/examples/simple_simulations/two_gaussians.html
+++ b/dev/examples/simple_simulations/two_gaussians.html
@@ -105,7 +105,7 @@
 <span class="n">gs2</span><span class="o">.</span><span class="n">A</span><span class="o">.</span><span class="n">map</span><span class="p">[</span><span class="s">&#39;is_set&#39;</span><span class="p">][:]</span> <span class="o">=</span> <span class="bp">True</span>
 
 <span class="c"># Create the dataset</span>
-<span class="n">m</span><span class="o">.</span><span class="n">generate_cube</span><span class="p">()</span>
+<span class="n">m</span><span class="o">.</span><span class="n">generate_data_from_model</span><span class="p">()</span>
 
 <span class="c"># Assign the data generated to the Spectrum with some poissonian noise</span>
 <span class="n">s</span><span class="o">.</span><span class="n">data</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">random</span><span class="o">.</span><span class="n">poisson</span><span class="p">(</span><span class="n">m</span><span class="o">.</span><span class="n">model_cube</span><span class="p">)</span>
