Updated doc release: dev

--- a/dev/user_guide/eels.html
+++ b/dev/user_guide/eels.html
@@ -29,7 +29,7 @@
     <link rel="shortcut icon" href="../_static/hyperspy_logo.ico"/>
     <link rel="top" title="Hyperspy 0.3.dev documentation" href="../index.html" />
     <link rel="up" title="Hyperspy User Guide (DRAFT)" href="index.html" />
-    <link rel="next" title="Bibliography" href="bibliography.html" />
+    <link rel="next" title="Image Processing" href="image.html" />
     <link rel="prev" title="Curve fitting" href="model.html" /> 
   </head>
   <body>
@@ -46,7 +46,7 @@
           <a href="../np-modindex.html" title="Python Module Index"
              >modules</a> |</li>
         <li class="right" >
-          <a href="bibliography.html" title="Bibliography"
+          <a href="image.html" title="Image Processing"
              accesskey="N">next</a> |</li>
         <li class="right" >
           <a href="model.html" title="Curve fitting"
@@ -78,8 +78,8 @@
   <p class="topless"><a href="model.html"
                         title="previous chapter">Curve fitting</a></p>
   <h4>Next topic</h4>
-  <p class="topless"><a href="bibliography.html"
-                        title="next chapter">Bibliography</a></p>
+  <p class="topless"><a href="image.html"
+                        title="next chapter">Image Processing</a></p>
   <h3>This Page</h3>
   <ul class="this-page-menu">
     <li><a href="../_sources/user_guide/eels.txt"
@@ -115,7 +115,7 @@
           <a href="../np-modindex.html" title="Python Module Index"
              >modules</a> |</li>
         <li class="right" >
-          <a href="bibliography.html" title="Bibliography"
+          <a href="image.html" title="Image Processing"
              >next</a> |</li>
         <li class="right" >
           <a href="model.html" title="Curve fitting"
