--- a/dev/user_guide/bibliography.html
+++ b/dev/user_guide/bibliography.html
@@ -30,7 +30,7 @@
     <link rel="top" title="Hyperspy 0.3.dev documentation" href="../index.html" />
     <link rel="up" title="Hyperspy User Guide (DRAFT)" href="index.html" />
     <link rel="next" title="Credits" href="../credits.html" />
-    <link rel="prev" title="Electron Energy Loss Spectroscopy extra features" href="eels.html" /> 
+    <link rel="prev" title="Image Processing" href="image.html" /> 
   </head>
   <body>
     <div class="related">
@@ -49,7 +49,7 @@
           <a href="../credits.html" title="Credits"
              accesskey="N">next</a> |</li>
         <li class="right" >
-          <a href="eels.html" title="Electron Energy Loss Spectroscopy extra features"
+          <a href="image.html" title="Image Processing"
              accesskey="P">previous</a> |</li>
         <li><a href="../index.html">Hyperspy 0.3.dev documentation</a> &raquo;</li>
           <li><a href="index.html" accesskey="U">Hyperspy User Guide (DRAFT)</a> &raquo;</li> 
@@ -668,8 +668,8 @@ p.infolinks { margin: 0.5em 0em 0em 0em; padding: 0px; }
 </ul>
 
   <h4>Previous topic</h4>
-  <p class="topless"><a href="eels.html"
-                        title="previous chapter">Electron Energy Loss Spectroscopy extra features</a></p>
+  <p class="topless"><a href="image.html"
+                        title="previous chapter">Image Processing</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="../credits.html"
                         title="next chapter">Credits</a></p>
@@ -711,7 +711,7 @@ p.infolinks { margin: 0.5em 0em 0em 0em; padding: 0px; }
           <a href="../credits.html" title="Credits"
              >next</a> |</li>
         <li class="right" >
-          <a href="eels.html" title="Electron Energy Loss Spectroscopy extra features"
+          <a href="image.html" title="Image Processing"
              >previous</a> |</li>
         <li><a href="../index.html">Hyperspy 0.3.dev documentation</a> &raquo;</li>
           <li><a href="index.html" >Hyperspy User Guide (DRAFT)</a> &raquo;</li> 
