Updated doc release: dev

--- a/dev/examples/file_IO/aggregate_load.html
+++ b/dev/examples/file_IO/aggregate_load.html
@@ -69,13 +69,13 @@
 
 <span class="n">s1</span> <span class="o">=</span> <span class="n">Spectrum</span><span class="p">({</span><span class="s">&#39;data&#39;</span> <span class="p">:</span> <span class="n">np</span><span class="o">.</span><span class="n">random</span><span class="o">.</span><span class="n">random</span><span class="p">((</span><span class="mi">64</span><span class="p">,</span> <span class="mi">64</span><span class="p">,</span> <span class="mi">1024</span><span class="p">)),</span>
                <span class="s">&#39;mapped_parameters&#39;</span> <span class="p">:</span> <span class="p">{</span>
-                    <span class="s">&#39;name&#39;</span><span class="p">:</span><span class="s">&#39;file1&#39;</span><span class="p">}})</span>
+                    <span class="s">&#39;title&#39;</span><span class="p">:</span><span class="s">&#39;file1&#39;</span><span class="p">}})</span>
 <span class="n">s2</span> <span class="o">=</span> <span class="n">Spectrum</span><span class="p">({</span><span class="s">&#39;data&#39;</span> <span class="p">:</span> <span class="n">np</span><span class="o">.</span><span class="n">random</span><span class="o">.</span><span class="n">random</span><span class="p">((</span><span class="mi">64</span><span class="p">,</span> <span class="mi">64</span><span class="p">,</span> <span class="mi">1024</span><span class="p">)),</span>
                <span class="s">&#39;mapped_parameters&#39;</span> <span class="p">:</span> <span class="p">{</span>
-                    <span class="s">&#39;name&#39;</span><span class="p">:</span><span class="s">&#39;file2&#39;</span><span class="p">}})</span>
+                    <span class="s">&#39;title&#39;</span><span class="p">:</span><span class="s">&#39;file2&#39;</span><span class="p">}})</span>
 <span class="n">s3</span> <span class="o">=</span> <span class="n">Spectrum</span><span class="p">({</span><span class="s">&#39;data&#39;</span> <span class="p">:</span> <span class="n">np</span><span class="o">.</span><span class="n">random</span><span class="o">.</span><span class="n">random</span><span class="p">((</span><span class="mi">64</span><span class="p">,</span> <span class="mi">64</span><span class="p">,</span> <span class="mi">1024</span><span class="p">)),</span>
                <span class="s">&#39;mapped_parameters&#39;</span> <span class="p">:</span> <span class="p">{</span>
-                    <span class="s">&#39;name&#39;</span><span class="p">:</span><span class="s">&#39;file3&#39;</span><span class="p">}})</span>
+                    <span class="s">&#39;title&#39;</span><span class="p">:</span><span class="s">&#39;file3&#39;</span><span class="p">}})</span>
 
 <span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">Perhaps a better example (but one that can&#39;t be self contained without</span>
