Updated doc release: dev

--- a/dev/user_guide/mapped_parameters_structure.html
+++ b/dev/user_guide/mapped_parameters_structure.html
@@ -105,7 +105,7 @@ node.</p>
 <dd>type: Float</dd>
 <dt>correlation_factor</dt>
 <dd>type: Float</dd>
-<dt>gain_estimation_method</dt>
+<dt>parameters_estimation_method</dt>
 <dd>type: Str</dd>
 </dl>
 </div>
