Updated doc release: dev

--- a/dev/examples/data_navigation/3D_image.html
+++ b/dev/examples/data_navigation/3D_image.html
@@ -8,7 +8,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>data_navigation example code: 3D_image.py &mdash; Hyperspy 0.3.dev documentation</title>
+    <title>data_navigation example code: 3D_image.py &mdash; Hyperspy 0.3.0beta2.1 documentation</title>
     
     <link rel="stylesheet" href="../../_static/default.css" type="text/css" />
     <link rel="stylesheet" href="../../_static/pygments.css" type="text/css" />
@@ -16,7 +16,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../../',
-        VERSION:     '0.3.dev',
+        VERSION:     '0.3.0beta2.1',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -27,7 +27,7 @@
     <script type="text/javascript" src="../../_static/doctools.js"></script>
     <script type="text/javascript" src="../../_static/sidebar.js"></script>
     <link rel="shortcut icon" href="../../_static/hyperspy_logo.ico"/>
-    <link rel="top" title="Hyperspy 0.3.dev documentation" href="../../index.html" /> 
+    <link rel="top" title="Hyperspy 0.3.0beta2.1 documentation" href="../../index.html" /> 
   </head>
   <body>
     <div class="related">
@@ -42,7 +42,7 @@
         <li class="right" >
           <a href="../../np-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li><a href="../../index.html">Hyperspy 0.3.dev documentation</a> &raquo;</li> 
+        <li><a href="../../index.html">Hyperspy 0.3.0beta2.1 documentation</a> &raquo;</li> 
       </ul>
     </div>  
 
@@ -91,7 +91,7 @@
 <div id="searchbox" style="display: none">
   <h3>Quick search</h3>
     <form class="search" action="../../search.html" method="get">
-      <input type="text" name="q" size="18" />
+      <input type="text" name="q" />
       <input type="submit" value="Go" />
       <input type="hidden" name="check_keywords" value="yes" />
       <input type="hidden" name="area" value="default" />
@@ -117,12 +117,12 @@
         <li class="right" >
           <a href="../../np-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li><a href="../../index.html">Hyperspy 0.3.dev documentation</a> &raquo;</li> 
+        <li><a href="../../index.html">Hyperspy 0.3.0beta2.1 documentation</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer">
         &copy; Copyright 2011, The hyperspy development team.
-      Created using <a href="http://sphinx.pocoo.org/">Sphinx</a> 1.1pre.
+      Created using <a href="http://sphinx.pocoo.org/">Sphinx</a> 1.1.2.
     </div>
   </body>
 </html>
