--- a/dev/user_guide/bibliography.html
+++ b/dev/user_guide/bibliography.html
@@ -8,7 +8,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Bibliography &mdash; Hyperspy 0.3.dev documentation</title>
+    <title>Bibliography &mdash; Hyperspy 0.3.0beta2.1 documentation</title>
     
     <link rel="stylesheet" href="../_static/default.css" type="text/css" />
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
@@ -16,7 +16,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../',
-        VERSION:     '0.3.dev',
+        VERSION:     '0.3.0beta2.1',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -27,10 +27,10 @@
     <script type="text/javascript" src="../_static/doctools.js"></script>
     <script type="text/javascript" src="../_static/sidebar.js"></script>
     <link rel="shortcut icon" href="../_static/hyperspy_logo.ico"/>
-    <link rel="top" title="Hyperspy 0.3.dev documentation" href="../index.html" />
+    <link rel="top" title="Hyperspy 0.3.0beta2.1 documentation" href="../index.html" />
     <link rel="up" title="Hyperspy User Guide (DRAFT)" href="index.html" />
     <link rel="next" title="Credits" href="../credits.html" />
-    <link rel="prev" title="Image Processing" href="image.html" /> 
+    <link rel="prev" title="Mapped parameters structure" href="mapped_parameters_structure.html" /> 
   </head>
   <body>
     <div class="related">
@@ -49,9 +49,9 @@
           <a href="../credits.html" title="Credits"
              accesskey="N">next</a> |</li>
         <li class="right" >
-          <a href="image.html" title="Image Processing"
+          <a href="mapped_parameters_structure.html" title="Mapped parameters structure"
              accesskey="P">previous</a> |</li>
-        <li><a href="../index.html">Hyperspy 0.3.dev documentation</a> &raquo;</li>
+        <li><a href="../index.html">Hyperspy 0.3.0beta2.1 documentation</a> &raquo;</li>
           <li><a href="index.html" accesskey="U">Hyperspy User Guide (DRAFT)</a> &raquo;</li> 
       </ul>
     </div>  
@@ -663,8 +663,8 @@ p.infolinks { margin: 0.5em 0em 0em 0em; padding: 0px; }
 </ul>
 
   <h4>Previous topic</h4>
-  <p class="topless"><a href="image.html"
-                        title="previous chapter">Image Processing</a></p>
+  <p class="topless"><a href="mapped_parameters_structure.html"
+                        title="previous chapter">Mapped parameters structure</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="../credits.html"
                         title="next chapter">Credits</a></p>
@@ -676,7 +676,7 @@ p.infolinks { margin: 0.5em 0em 0em 0em; padding: 0px; }
 <div id="searchbox" style="display: none">
   <h3>Quick search</h3>
     <form class="search" action="../search.html" method="get">
-      <input type="text" name="q" size="18" />
+      <input type="text" name="q" />
       <input type="submit" value="Go" />
       <input type="hidden" name="check_keywords" value="yes" />
       <input type="hidden" name="area" value="default" />
@@ -706,15 +706,15 @@ p.infolinks { margin: 0.5em 0em 0em 0em; padding: 0px; }
           <a href="../credits.html" title="Credits"
              >next</a> |</li>
         <li class="right" >
-          <a href="image.html" title="Image Processing"
+          <a href="mapped_parameters_structure.html" title="Mapped parameters structure"
              >previous</a> |</li>
-        <li><a href="../index.html">Hyperspy 0.3.dev documentation</a> &raquo;</li>
+        <li><a href="../index.html">Hyperspy 0.3.0beta2.1 documentation</a> &raquo;</li>
           <li><a href="index.html" >Hyperspy User Guide (DRAFT)</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer">
         &copy; Copyright 2011, The hyperspy development team.
-      Created using <a href="http://sphinx.pocoo.org/">Sphinx</a> 1.1pre.
+      Created using <a href="http://sphinx.pocoo.org/">Sphinx</a> 1.1.2.
     </div>
   </body>
 </html>
