--- a/dev/user_guide/image.html
+++ b/dev/user_guide/image.html
@@ -8,7 +8,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Image Processing &mdash; Hyperspy 0.3.dev documentation</title>
+    <title>Image Processing &mdash; Hyperspy 0.3.0beta2.1 documentation</title>
     
     <link rel="stylesheet" href="../_static/default.css" type="text/css" />
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
@@ -16,7 +16,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../',
-        VERSION:     '0.3.dev',
+        VERSION:     '0.3.0beta2.1',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -27,7 +27,7 @@
     <script type="text/javascript" src="../_static/doctools.js"></script>
     <script type="text/javascript" src="../_static/sidebar.js"></script>
     <link rel="shortcut icon" href="../_static/hyperspy_logo.ico"/>
-    <link rel="top" title="Hyperspy 0.3.dev documentation" href="../index.html" />
+    <link rel="top" title="Hyperspy 0.3.0beta2.1 documentation" href="../index.html" />
     <link rel="up" title="Hyperspy User Guide (DRAFT)" href="index.html" />
     <link rel="next" title="Mapped parameters structure" href="mapped_parameters_structure.html" />
     <link rel="prev" title="Electron Energy Loss Spectroscopy extra features" href="eels.html" /> 
@@ -51,7 +51,7 @@
         <li class="right" >
           <a href="eels.html" title="Electron Energy Loss Spectroscopy extra features"
              accesskey="P">previous</a> |</li>
-        <li><a href="../index.html">Hyperspy 0.3.dev documentation</a> &raquo;</li>
+        <li><a href="../index.html">Hyperspy 0.3.0beta2.1 documentation</a> &raquo;</li>
           <li><a href="index.html" accesskey="U">Hyperspy User Guide (DRAFT)</a> &raquo;</li> 
       </ul>
     </div>  
@@ -266,7 +266,7 @@ parameters are plotted.</p>
 <div id="searchbox" style="display: none">
   <h3>Quick search</h3>
     <form class="search" action="../search.html" method="get">
-      <input type="text" name="q" size="18" />
+      <input type="text" name="q" />
       <input type="submit" value="Go" />
       <input type="hidden" name="check_keywords" value="yes" />
       <input type="hidden" name="area" value="default" />
@@ -298,13 +298,13 @@ parameters are plotted.</p>
         <li class="right" >
           <a href="eels.html" title="Electron Energy Loss Spectroscopy extra features"
              >previous</a> |</li>
-        <li><a href="../index.html">Hyperspy 0.3.dev documentation</a> &raquo;</li>
+        <li><a href="../index.html">Hyperspy 0.3.0beta2.1 documentation</a> &raquo;</li>
           <li><a href="index.html" >Hyperspy User Guide (DRAFT)</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer">
         &copy; Copyright 2011, The hyperspy development team.
-      Created using <a href="http://sphinx.pocoo.org/">Sphinx</a> 1.1pre.
+      Created using <a href="http://sphinx.pocoo.org/">Sphinx</a> 1.1.2.
     </div>
   </body>
 </html>
