Updated doc release: dev

--- a/dev/user_guide/mva.html
+++ b/dev/user_guide/mva.html
@@ -74,15 +74,13 @@ the methods described in this section.</p>
 <p class="first admonition-title">Note</p>
 <p>In version 0.3.0beta3 the syntax for most of the machine-learning functions
 have changed. It follows a summary of the changes:</p>
-<ul class="simple">
-<li><cite>Spectrum.principal_components_analysis</cite> was renamed to</li>
+<ul class="last simple">
+<li><cite>Spectrum.principal_components_analysis</cite> was renamed to <cite>Spectrum.decomposition</cite></li>
+<li><cite>Spectrum.independent_components_analysis</cite> was renamed to <cite>Spectrum.blind_source_separation</cite></li>
+<li><cite>Spectrum.pca_build_SI</cite> was renamed to <cite>get_decomposition_model</cite></li>
+<li><cite>Spectrum.ica_build_SI</cite> was renamed to <cite>get_bss_model</cite></li>
+<li><cite>Spectrum.plot_lev</cite> was rename to <cite>Spectrum.plot_explained_variance_ratio</cite></li>
 </ul>
-<p class="last"><cite>Spectrum.decomposition</cite>
-* <cite>Spectrum.independent_components_analysis</cite> was renamed to
-<cite>Spectrum.blind_source_separation</cite>
-* <cite>Spectrum.pca_build_SI</cite> was renamed to <cite>get_decomposition_model</cite>
-* <cite>Spectrum.ica_build_SI</cite> was renamed to <cite>get_bss_model</cite>
-* <cite>Spectrum.plot_lev</cite> was rename to <cite>Spectrum.plot_explained_variance_ratio</cite></p>
 </div>
 </div>
 <div class="section" id="decomposition">
