--- a/dev/examples/file_IO/index.html
+++ b/dev/examples/file_IO/index.html
@@ -8,7 +8,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>file_IO Examples &mdash; Hyperspy 0.3.0beta2.1 documentation</title>
+    <title>file_IO Examples &mdash; Hyperspy 0.3.beta3-dev documentation</title>
     
     <link rel="stylesheet" href="../../_static/default.css" type="text/css" />
     <link rel="stylesheet" href="../../_static/pygments.css" type="text/css" />
@@ -16,7 +16,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../../',
-        VERSION:     '0.3.0beta2.1',
+        VERSION:     '0.3.beta3-dev',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -27,7 +27,7 @@
     <script type="text/javascript" src="../../_static/doctools.js"></script>
     <script type="text/javascript" src="../../_static/sidebar.js"></script>
     <link rel="shortcut icon" href="../../_static/hyperspy_logo.ico"/>
-    <link rel="top" title="Hyperspy 0.3.0beta2.1 documentation" href="../../index.html" /> 
+    <link rel="top" title="Hyperspy 0.3.beta3-dev documentation" href="../../index.html" /> 
   </head>
   <body>
     <div class="related">
@@ -42,7 +42,7 @@
         <li class="right" >
           <a href="../../np-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li><a href="../../index.html">Hyperspy 0.3.0beta2.1 documentation</a> &raquo;</li> 
+        <li><a href="../../index.html">Hyperspy 0.3.beta3-dev documentation</a> &raquo;</li> 
       </ul>
     </div>  
 
@@ -57,9 +57,9 @@
 <col class="field-name" />
 <col class="field-body" />
 <tbody valign="top">
-<tr class="field-odd field"><th class="field-name">Release:</th><td class="field-body">0.3.0beta2.1</td>
+<tr class="field-odd field"><th class="field-name">Release:</th><td class="field-body">0.3.beta3-dev</td>
 </tr>
-<tr class="field-even field"><th class="field-name">Date:</th><td class="field-body">February 20, 2012</td>
+<tr class="field-even field"><th class="field-name">Date:</th><td class="field-body">February 29, 2012</td>
 </tr>
 </tbody>
 </table>
@@ -113,11 +113,11 @@
         <li class="right" >
           <a href="../../np-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li><a href="../../index.html">Hyperspy 0.3.0beta2.1 documentation</a> &raquo;</li> 
+        <li><a href="../../index.html">Hyperspy 0.3.beta3-dev documentation</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer">
-        &copy; Copyright 2011, The hyperspy development team.
+        &copy; Copyright 2012, The Hyperspy development team.
       Created using <a href="http://sphinx.pocoo.org/">Sphinx</a> 1.1.2.
     </div>
   </body>
