--- a/dev/search.html
+++ b/dev/search.html
@@ -8,7 +8,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Search &mdash; Hyperspy 0.3.0beta2.1 documentation</title>
+    <title>Search &mdash; Hyperspy 0.3.beta3-dev documentation</title>
     
     <link rel="stylesheet" href="_static/default.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
@@ -16,7 +16,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '',
-        VERSION:     '0.3.0beta2.1',
+        VERSION:     '0.3.beta3-dev',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -28,7 +28,7 @@
     <script type="text/javascript" src="_static/searchtools.js"></script>
     <script type="text/javascript" src="_static/sidebar.js"></script>
     <link rel="shortcut icon" href="_static/hyperspy_logo.ico"/>
-    <link rel="top" title="Hyperspy 0.3.0beta2.1 documentation" href="index.html" />
+    <link rel="top" title="Hyperspy 0.3.beta3-dev documentation" href="index.html" />
   <script type="text/javascript">
     jQuery(function() { Search.loadIndex("searchindex.js"); });
   </script>
@@ -48,7 +48,7 @@
         <li class="right" >
           <a href="np-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li><a href="index.html">Hyperspy 0.3.0beta2.1 documentation</a> &raquo;</li> 
+        <li><a href="index.html">Hyperspy 0.3.beta3-dev documentation</a> &raquo;</li> 
       </ul>
     </div>  
 
@@ -105,11 +105,11 @@
         <li class="right" >
           <a href="np-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li><a href="index.html">Hyperspy 0.3.0beta2.1 documentation</a> &raquo;</li> 
+        <li><a href="index.html">Hyperspy 0.3.beta3-dev documentation</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer">
-        &copy; Copyright 2011, The hyperspy development team.
+        &copy; Copyright 2012, The Hyperspy development team.
       Created using <a href="http://sphinx.pocoo.org/">Sphinx</a> 1.1.2.
     </div>
   </body>
