--- a/dev/user_guide/bibliography.html
+++ b/dev/user_guide/bibliography.html
@@ -8,7 +8,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Bibliography &mdash; Hyperspy 0.3.0beta2.1 documentation</title>
+    <title>Bibliography &mdash; Hyperspy 0.3.beta3-dev documentation</title>
     
     <link rel="stylesheet" href="../_static/default.css" type="text/css" />
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
@@ -16,7 +16,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../',
-        VERSION:     '0.3.0beta2.1',
+        VERSION:     '0.3.beta3-dev',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -27,7 +27,7 @@
     <script type="text/javascript" src="../_static/doctools.js"></script>
     <script type="text/javascript" src="../_static/sidebar.js"></script>
     <link rel="shortcut icon" href="../_static/hyperspy_logo.ico"/>
-    <link rel="top" title="Hyperspy 0.3.0beta2.1 documentation" href="../index.html" />
+    <link rel="top" title="Hyperspy 0.3.beta3-dev documentation" href="../index.html" />
     <link rel="up" title="Hyperspy User Guide (DRAFT)" href="index.html" />
     <link rel="next" title="Credits" href="../credits.html" />
     <link rel="prev" title="Mapped parameters structure" href="mapped_parameters_structure.html" /> 
@@ -51,7 +51,7 @@
         <li class="right" >
           <a href="mapped_parameters_structure.html" title="Mapped parameters structure"
              accesskey="P">previous</a> |</li>
-        <li><a href="../index.html">Hyperspy 0.3.0beta2.1 documentation</a> &raquo;</li>
+        <li><a href="../index.html">Hyperspy 0.3.beta3-dev documentation</a> &raquo;</li>
           <li><a href="index.html" accesskey="U">Hyperspy User Guide (DRAFT)</a> &raquo;</li> 
       </ul>
     </div>  
@@ -708,12 +708,12 @@ p.infolinks { margin: 0.5em 0em 0em 0em; padding: 0px; }
         <li class="right" >
           <a href="mapped_parameters_structure.html" title="Mapped parameters structure"
              >previous</a> |</li>
-        <li><a href="../index.html">Hyperspy 0.3.0beta2.1 documentation</a> &raquo;</li>
+        <li><a href="../index.html">Hyperspy 0.3.beta3-dev documentation</a> &raquo;</li>
           <li><a href="index.html" >Hyperspy User Guide (DRAFT)</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer">
-        &copy; Copyright 2011, The hyperspy development team.
+        &copy; Copyright 2012, The Hyperspy development team.
       Created using <a href="http://sphinx.pocoo.org/">Sphinx</a> 1.1.2.
     </div>
   </body>
