--- a/current/user_guide/mapped_parameters_structure.html
+++ b/current/user_guide/mapped_parameters_structure.html
@@ -8,7 +8,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Mapped parameters structure &mdash; Hyperspy 0.4 documentation</title>
+    <title>Mapped parameters structure &mdash; Hyperspy 0.3.0beta2.1 documentation</title>
     
     <link rel="stylesheet" href="../_static/default.css" type="text/css" />
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
@@ -16,7 +16,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../',
-        VERSION:     '0.4',
+        VERSION:     '0.3.0beta2.1',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -27,10 +27,10 @@
     <script type="text/javascript" src="../_static/doctools.js"></script>
     <script type="text/javascript" src="../_static/sidebar.js"></script>
     <link rel="shortcut icon" href="../_static/hyperspy_logo.ico"/>
-    <link rel="top" title="Hyperspy 0.4 documentation" href="../index.html" />
+    <link rel="top" title="Hyperspy 0.3.0beta2.1 documentation" href="../index.html" />
     <link rel="up" title="Hyperspy User Guide (DRAFT)" href="index.html" />
     <link rel="next" title="Bibliography" href="bibliography.html" />
-    <link rel="prev" title="Uses cases" href="use_cases.html" /> 
+    <link rel="prev" title="Use cases" href="use_cases.html" /> 
   </head>
   <body>
     <div class="related">
@@ -49,9 +49,9 @@
           <a href="bibliography.html" title="Bibliography"
              accesskey="N">next</a> |</li>
         <li class="right" >
-          <a href="use_cases.html" title="Uses cases"
+          <a href="use_cases.html" title="Use cases"
              accesskey="P">previous</a> |</li>
-        <li><a href="../index.html">Hyperspy 0.4 documentation</a> &raquo;</li>
+        <li><a href="../index.html">Hyperspy 0.3.0beta2.1 documentation</a> &raquo;</li>
           <li><a href="index.html" accesskey="U">Hyperspy User Guide (DRAFT)</a> &raquo;</li> 
       </ul>
     </div>  
@@ -207,7 +207,7 @@ for a sample composed of Boron and Nitrogen.</p>
 
   <h4>Previous topic</h4>
   <p class="topless"><a href="use_cases.html"
-                        title="previous chapter">Uses cases</a></p>
+                        title="previous chapter">Use cases</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="bibliography.html"
                         title="next chapter">Bibliography</a></p>
@@ -249,9 +249,9 @@ for a sample composed of Boron and Nitrogen.</p>
           <a href="bibliography.html" title="Bibliography"
              >next</a> |</li>
         <li class="right" >
-          <a href="use_cases.html" title="Uses cases"
+          <a href="use_cases.html" title="Use cases"
              >previous</a> |</li>
-        <li><a href="../index.html">Hyperspy 0.4 documentation</a> &raquo;</li>
+        <li><a href="../index.html">Hyperspy 0.3.0beta2.1 documentation</a> &raquo;</li>
           <li><a href="index.html" >Hyperspy User Guide (DRAFT)</a> &raquo;</li> 
       </ul>
     </div>
