--- a/dev/user_guide/mapped_parameters_structure.html
+++ b/dev/user_guide/mapped_parameters_structure.html
@@ -8,7 +8,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Mapped parameters structure &mdash; Hyperspy 0.3.0beta2.1 documentation</title>
+    <title>Mapped parameters structure &mdash; Hyperspy 0.4 documentation</title>
     
     <link rel="stylesheet" href="../_static/default.css" type="text/css" />
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
@@ -16,7 +16,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../',
-        VERSION:     '0.3.0beta2.1',
+        VERSION:     '0.4',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -27,7 +27,7 @@
     <script type="text/javascript" src="../_static/doctools.js"></script>
     <script type="text/javascript" src="../_static/sidebar.js"></script>
     <link rel="shortcut icon" href="../_static/hyperspy_logo.ico"/>
-    <link rel="top" title="Hyperspy 0.3.0beta2.1 documentation" href="../index.html" />
+    <link rel="top" title="Hyperspy 0.4 documentation" href="../index.html" />
     <link rel="up" title="Hyperspy User Guide (DRAFT)" href="index.html" />
     <link rel="next" title="Bibliography" href="bibliography.html" />
     <link rel="prev" title="Use cases" href="use_cases.html" /> 
@@ -51,7 +51,7 @@
         <li class="right" >
           <a href="use_cases.html" title="Use cases"
              accesskey="P">previous</a> |</li>
-        <li><a href="../index.html">Hyperspy 0.3.0beta2.1 documentation</a> &raquo;</li>
+        <li><a href="../index.html">Hyperspy 0.4 documentation</a> &raquo;</li>
           <li><a href="index.html" accesskey="U">Hyperspy User Guide (DRAFT)</a> &raquo;</li> 
       </ul>
     </div>  
@@ -251,7 +251,7 @@ for a sample composed of Boron and Nitrogen.</p>
         <li class="right" >
           <a href="use_cases.html" title="Use cases"
              >previous</a> |</li>
-        <li><a href="../index.html">Hyperspy 0.3.0beta2.1 documentation</a> &raquo;</li>
+        <li><a href="../index.html">Hyperspy 0.4 documentation</a> &raquo;</li>
           <li><a href="index.html" >Hyperspy User Guide (DRAFT)</a> &raquo;</li> 
       </ul>
     </div>
