Updated doc release: dev

--- a/dev/user_guide/intro.html
+++ b/dev/user_guide/intro.html
@@ -8,7 +8,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Introduction &mdash; Hyperspy 0.4 documentation</title>
+    <title>Introduction &mdash; Hyperspy 0.4.1dev documentation</title>
     
     <link rel="stylesheet" href="../_static/default.css" type="text/css" />
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
@@ -16,7 +16,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../',
-        VERSION:     '0.4',
+        VERSION:     '0.4.1dev',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -27,9 +27,9 @@
     <script type="text/javascript" src="../_static/doctools.js"></script>
     <script type="text/javascript" src="../_static/sidebar.js"></script>
     <link rel="shortcut icon" href="../_static/hyperspy_logo.ico"/>
-    <link rel="top" title="Hyperspy 0.4 documentation" href="../index.html" />
+    <link rel="top" title="Hyperspy 0.4.1dev documentation" href="../index.html" />
     <link rel="up" title="Hyperspy User Guide (DRAFT)" href="index.html" />
-    <link rel="next" title="What’s new in Hyperspy" href="what_is_new.html" />
+    <link rel="next" title="What’s new" href="what_is_new.html" />
     <link rel="prev" title="Hyperspy User Guide (DRAFT)" href="index.html" /> 
   </head>
   <body>
@@ -46,12 +46,12 @@
           <a href="../np-modindex.html" title="Python Module Index"
              >modules</a> |</li>
         <li class="right" >
-          <a href="what_is_new.html" title="What’s new in Hyperspy"
+          <a href="what_is_new.html" title="What’s new"
              accesskey="N">next</a> |</li>
         <li class="right" >
           <a href="index.html" title="Hyperspy User Guide (DRAFT)"
              accesskey="P">previous</a> |</li>
-        <li><a href="../index.html">Hyperspy 0.4 documentation</a> &raquo;</li>
+        <li><a href="../index.html">Hyperspy 0.4.1dev documentation</a> &raquo;</li>
           <li><a href="index.html" accesskey="U">Hyperspy User Guide (DRAFT)</a> &raquo;</li> 
       </ul>
     </div>  
@@ -122,7 +122,7 @@
                         title="previous chapter">Hyperspy User Guide (DRAFT)</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="what_is_new.html"
-                        title="next chapter">What&#8217;s new in Hyperspy</a></p>
+                        title="next chapter">What&#8217;s new</a></p>
   <h3>This Page</h3>
   <ul class="this-page-menu">
     <li><a href="../_sources/user_guide/intro.txt"
@@ -158,12 +158,12 @@
           <a href="../np-modindex.html" title="Python Module Index"
              >modules</a> |</li>
         <li class="right" >
-          <a href="what_is_new.html" title="What’s new in Hyperspy"
+          <a href="what_is_new.html" title="What’s new"
              >next</a> |</li>
         <li class="right" >
           <a href="index.html" title="Hyperspy User Guide (DRAFT)"
              >previous</a> |</li>
-        <li><a href="../index.html">Hyperspy 0.4 documentation</a> &raquo;</li>
+        <li><a href="../index.html">Hyperspy 0.4.1dev documentation</a> &raquo;</li>
           <li><a href="index.html" >Hyperspy User Guide (DRAFT)</a> &raquo;</li> 
       </ul>
     </div>
