--- a/dev/user_guide/model.html
+++ b/dev/user_guide/model.html
@@ -8,7 +8,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Curve fitting &mdash; Hyperspy 0.4 documentation</title>
+    <title>Curve fitting &mdash; Hyperspy 0.4.1dev documentation</title>
     
     <link rel="stylesheet" href="../_static/default.css" type="text/css" />
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
@@ -16,7 +16,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../',
-        VERSION:     '0.4',
+        VERSION:     '0.4.1dev',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -27,9 +27,9 @@
     <script type="text/javascript" src="../_static/doctools.js"></script>
     <script type="text/javascript" src="../_static/sidebar.js"></script>
     <link rel="shortcut icon" href="../_static/hyperspy_logo.ico"/>
-    <link rel="top" title="Hyperspy 0.4 documentation" href="../index.html" />
+    <link rel="top" title="Hyperspy 0.4.1dev documentation" href="../index.html" />
     <link rel="up" title="Hyperspy User Guide (DRAFT)" href="index.html" />
-    <link rel="next" title="Use cases" href="use_cases.html" />
+    <link rel="next" title="Mapped parameters structure" href="mapped_parameters_structure.html" />
     <link rel="prev" title="Machine learning" href="mva.html" /> 
   </head>
   <body>
@@ -46,12 +46,12 @@
           <a href="../np-modindex.html" title="Python Module Index"
              >modules</a> |</li>
         <li class="right" >
-          <a href="use_cases.html" title="Use cases"
+          <a href="mapped_parameters_structure.html" title="Mapped parameters structure"
              accesskey="N">next</a> |</li>
         <li class="right" >
           <a href="mva.html" title="Machine learning"
              accesskey="P">previous</a> |</li>
-        <li><a href="../index.html">Hyperspy 0.4 documentation</a> &raquo;</li>
+        <li><a href="../index.html">Hyperspy 0.4.1dev documentation</a> &raquo;</li>
           <li><a href="index.html" accesskey="U">Hyperspy User Guide (DRAFT)</a> &raquo;</li> 
       </ul>
     </div>  
@@ -245,8 +245,8 @@ the result of the fit <strong>when fitting multidimensional datasets</strong>.</
   <p class="topless"><a href="mva.html"
                         title="previous chapter">Machine learning</a></p>
   <h4>Next topic</h4>
-  <p class="topless"><a href="use_cases.html"
-                        title="next chapter">Use cases</a></p>
+  <p class="topless"><a href="mapped_parameters_structure.html"
+                        title="next chapter">Mapped parameters structure</a></p>
   <h3>This Page</h3>
   <ul class="this-page-menu">
     <li><a href="../_sources/user_guide/model.txt"
@@ -282,12 +282,12 @@ the result of the fit <strong>when fitting multidimensional datasets</strong>.</
           <a href="../np-modindex.html" title="Python Module Index"
              >modules</a> |</li>
         <li class="right" >
-          <a href="use_cases.html" title="Use cases"
+          <a href="mapped_parameters_structure.html" title="Mapped parameters structure"
              >next</a> |</li>
         <li class="right" >
           <a href="mva.html" title="Machine learning"
              >previous</a> |</li>
-        <li><a href="../index.html">Hyperspy 0.4 documentation</a> &raquo;</li>
+        <li><a href="../index.html">Hyperspy 0.4.1dev documentation</a> &raquo;</li>
           <li><a href="index.html" >Hyperspy User Guide (DRAFT)</a> &raquo;</li> 
       </ul>
     </div>
