Updated doc release: dev

--- a/dev/genindex.html
+++ b/dev/genindex.html
@@ -4566,6 +4566,10 @@
   </dt>
 
       
+  <dt><a href="api/hyperspy.signals.html#hyperspy.signals.spectrum.Spectrum.to_EDS">to_EDS() (hyperspy.signals.spectrum.Spectrum method)</a>
+  </dt>
+
+      
   <dt><a href="api/hyperspy.signals.html#hyperspy.signals.spectrum.Spectrum.to_EELS">to_EELS() (hyperspy.signals.spectrum.Spectrum method)</a>
   </dt>
 
