--- a/dev/examples/hyperspy_as_library/minimal_example.html
+++ b/dev/examples/hyperspy_as_library/minimal_example.html
@@ -75,7 +75,7 @@
 <span class="kn">import</span> <span class="nn">numpy</span> <span class="kn">as</span> <span class="nn">np</span>
 <span class="kn">import</span> <span class="nn">matplotlib.pyplot</span> <span class="kn">as</span> <span class="nn">plt</span>
 
-<span class="n">s</span> <span class="o">=</span> <span class="n">hspy</span><span class="o">.</span><span class="n">signals</span><span class="o">.</span><span class="n">Spectrum</span><span class="p">({</span><span class="s">&#39;data&#39;</span> <span class="p">:</span> <span class="n">np</span><span class="o">.</span><span class="n">random</span><span class="o">.</span><span class="n">rand</span><span class="p">(</span><span class="mi">1024</span><span class="p">)})</span>
+<span class="n">s</span> <span class="o">=</span> <span class="n">hspy</span><span class="o">.</span><span class="n">signals</span><span class="o">.</span><span class="n">Spectrum</span><span class="p">(</span><span class="n">np</span><span class="o">.</span><span class="n">random</span><span class="o">.</span><span class="n">rand</span><span class="p">(</span><span class="mi">1024</span><span class="p">))</span>
 <span class="n">s</span><span class="o">.</span><span class="n">plot</span><span class="p">()</span>
 
 <span class="n">plt</span><span class="o">.</span><span class="n">savefig</span><span class="p">(</span><span class="s">&quot;testSpectrum.png&quot;</span><span class="p">)</span>
